--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Kaushan+Script&family=Truculenta:opsz,wght@12..72,100..900&display=swap');
 
 :root {
-    --clr-prim-1: #801e00;
-    --clr-prim-2: #9e2700;
-    --clr-prim-3: #be3100;
-    --clr-prim-4: #de3b00;
-    --clr-prim-5: #ff4500;
-    --clr-prim-6: #ff5f34;
-    --clr-prim-7: #ff7450;
-    --clr-prim-8: #ff8868;
-    --clr-prim-9: #ff9a7e;
-    --clr-prim-10: #ffac94;
+    --clr-prim-1: #00009e;
+    --clr-prim-2: #0000be;
+    --clr-prim-3: #0000de;
+    --clr-prim-4: #0000ff;
+    --clr-prim-5: #0541ff;
+    --clr-prim-6: #2260ff;
+    --clr-prim-7: #3e78ff;
+    --clr-prim-8: #598eff;
+    --clr-prim-9: #74a3ff;
+    --clr-prim-10: #8fb6ff;
 
     --clr-grey-1: #3d3d3d;
     --clr-grey-2: #4d4d4d;
@@ -42,11 +42,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: #008080;
 }
 
 body {
     font-family: var(--ff-secondary);
-    background-color: var(--clr-light);
+    background-color: var(--clr-white);
     color: var(--clr-grey-1);
     line-height: 1.5;
     font-size: 0.875rem;
@@ -155,6 +156,70 @@ p {
 @media screen and (min-width: 992px) {
     .section-center {
         width: 95vw;
+    }
+}
+
+.nav-links {
+    display: none;
+}
+
+.nav {
+    height: 5rem;
+    padding: 1rem;
+    display: grid;
+    align-items: center;
+    transition: var(--transition);
+}
+
+.nav-center {
+    width: 100%;
+    max-width: 1170px;
+    margin: 0 auto;
+}
+
+.nav-header {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+}
+
+.nav-btn {
+    background: transparent;
+    border-color: transparent;
+    color: var(--clr-prim-5);
+    font-size: 2rem;
+    cursor: pointer;
+    justify-self: end;
+}
+
+@media screen and (min-width: 768px) {
+    .nav {
+        background: var(--clr-prim-10);
+    }
+    .nav-btn {
+        display: none;
+    }
+    .nav-links {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        justify-items: center;
+        column-gap: 2rem;
+        justify-self: end;
+    }
+    .nav-links a {
+        text-transform: capitalize;
+        color: var(--clr-grey-1);
+        font-weight: bold;
+        letter-spacing: var(--spacing);
+        transition: var(--transition);
+    }
+    .nav-links a:hover {
+        color: var(--clr-prim-5);
+    }
+    .nav-center {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        align-items: center;
     }
 }
 
