--- a/style.css
+++ b/style.css
@@ -158,6 +158,20 @@ p {
     }
 }
 
+.underline {
+    width: 5rem;
+    height: 0.25rem;
+    margin-bottom: 1.25rem;
+    background: var(--clr-prim-5);
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.section-title {
+    margin-bottom: 4rem;
+    text-align: center;
+}
+
 .nav-links {
     display: none;
 }
@@ -180,6 +194,12 @@ p {
     display: grid;
     grid-template-columns: auto 1fr;
     align-items: center;
+}
+
+.nav-logo {
+    margin-top: 5px;
+    /* margin-left: 5px; */
+    font-family: 'Kaushan Script', cursive;
 }
 
 .nav-btn {
@@ -220,6 +240,16 @@ p {
         grid-template-columns: auto 1fr;
         align-items: center;
     }
+}
+
+.navbar-fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color:var(--clr-white);
+    z-index: 2;
+    box-shadow: var(--light-shadow);
 }
 
 .sidebar {
@@ -291,5 +321,89 @@ p {
 .close-btn:hover {
     color: var(--clr-prim-5);
 }
+
+.hero .underline {
+    margin-bottom: 0.5rem;
+    margin-left: 0;
+}
+
+.hero-img {
+    display: none;
+}
+
+.hero {
+    background: var(--clr-prim-10);
+}
+
+.hero-center {
+    min-height: calc(100vh - 5rem);
+    display: grid;
+    place-items: center;
+}
+
+.hero-info h4 {
+    color: var(--clr-grey-3)
+}
+
+.hero-icons {
+    justify-items: start;
+}
+
+.hero-btn {
+    margin-top: 1.25rem;
+}
+
+@media screen and (min-width: 992px) {
+    .hero-img {
+        display: block;
+        position: relative;
+    }
+
+    .hero-center {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .hero-img::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border: 0.25rem solid var(--clr-prim-5);
+        top: 2rem;
+        right: -2rem;
+        border-radius: var(--radius);
+    }
+}
+
+.hero-photo {
+    max-width: 25rem;
+    max-height: 30rem;
+    object-fit: cover;
+    border-radius: var(--radius);
+    position: relative;
+}
+
+.about-title {
+    text-align: left;
+    margin-bottom: 2rem;
+}
+
+.about-title .underline {
+    margin-left: 0;
+}
+
+.about-center {
+    display: grid;
+    gap: 3rem 2rem;
+}
+
+.about-img {
+    justify-self: center;
+}
+
+
+
+
+
 
 
