5th - About section completed

--- a/style.css
+++ b/style.css
@@ -363,7 +363,8 @@ p {
         grid-template-columns: 1fr 1fr;
     }
 
-    .hero-img::before {
+    .hero-img::before, 
+    .about-img::before {
         content: '';
         position: absolute;
         width: 100%;
@@ -399,6 +400,23 @@ p {
 
 .about-img {
     justify-self: center;
+}
+
+@media screen and (min-width: 992px) {
+    .about-center {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .about-img {
+        position: relative;
+    }
+
+    .about-img::before {
+        left: -2rem;
+    }
+    .about-info {
+        align-self: center;
+    }
 }
 
 
