--- a/style.css
+++ b/style.css
@@ -17,11 +17,11 @@
     --clr-grey-3: #5d5d5d;
     --clr-grey-4: #6e6e6e;
     --clr-grey-5: #808080;
-    --clr-grey-6: #8c8c8c;
-    --clr-grey-7: #9e9e9e;
-    --clr-grey-8: #ababab;
-    --clr-grey-9: #bbbbbb;
-    --clr-grey-10: #cdcbcb;
+    --clr-grey-6: #888888;
+    --clr-grey-7: #a9a9a9;
+    --clr-grey-8: #bcbcbc;
+    --clr-grey-9: #cdcdcd;
+    --clr-grey-10: #dedede;
 
     --clr-white: #fff;
     --clr-light: beige;
@@ -170,6 +170,10 @@ p {
 .section-title {
     margin-bottom: 4rem;
     text-align: center;
+}
+
+.bg-grey {
+    background: var(--clr-grey-10);
 }
 
 .nav-links {
@@ -416,6 +420,57 @@ p {
     }
     .about-info {
         align-self: center;
+    }
+}
+
+.service {
+    background: var(--clr-white);
+    padding: 3rem 1.5rem;
+    margin-bottom: 2rem;
+    border-radius: var(--radius);
+    text-align: center;
+    transition: var(--transition);
+}
+
+.service-icon {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+}
+
+.service .underline {
+    width: 3rem;
+    height: 0.12rem;
+    transition: var(--transition);
+}
+
+.service p {
+    transition: var(--transition);
+}
+
+.service:hover {
+    background: var(--clr-prim-5);
+    color: var(--clr-white)
+}
+
+.service:hover p {
+    color: var(--clr-white);
+}
+
+.service:hover .underline {
+    background: var(--clr-white);
+}
+
+@media screen and (min-width: 676px) {
+    .services-center {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 2rem;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .services-center {
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
