--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
     --clr-grey-10: #dedede;
 
     --clr-white: beige;
-    /* --clr-light: beige; */
+    --clr-white-2: white;
     
     --ff-primary: 'Truculenta', sans-serif;
     --ff-secondary: 'Inter Tight', sans-serif;
@@ -202,7 +202,6 @@ p {
 
 .nav-logo {
     margin-top: 5px;
-    /* margin-left: 5px; */
     font-family: 'Kaushan Script', cursive;
 }
 
@@ -584,6 +583,60 @@ p {
     }
 }
 
+.connect {
+    min-height: 40vh;
+    position: relative;
+    padding: 10rem 0 5rem 0;
+    margin: 5rem 0;
+    
+}
 
+.video-container {
+    background: var(--clr-prim-10);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -2;
+}
+
+.connect::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--clr-prim-5);
+    opacity: 0.4;
+    z-index: -1;
+}
+
+.connect {
+    display: grid;
+    place-items: center;
+}
+
+.video-banner .section-title {
+    margin-bottom: 2rem;
+}
+
+.video-text {
+    max-width: 30rem;
+    color: var(--clr-grey-1)
+}
+
+.video-banner {
+    background: var(--clr-prim-10);
+    padding: 3rem 5rem 12rem 5rem;
+    text-align: center;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 75% 75%, 75% 100%, 50% 75%, 0% 75%);
+}
+
+.connect {
+    clip-path: polygon(50% 0, 100% 10%, 100% 90%, 50% 100%, 0 90%, 0 10%);
+}
 
 
