--- a/style.css
+++ b/style.css
@@ -862,3 +862,28 @@ p {
     gap: 3rem 1rem;
 }
 
+.footer {
+    padding-bottom: 2rem;
+    background: var(--clr-grey-1);
+    display: grid;
+    place-items: center;
+}
+
+.footer .social-icons {
+    margin-bottom: 2rem;
+}
+
+.footer .social-icon {
+    color: var(--clr-prim-5);
+}
+
+.footer .social-icon:hover {
+    color: var(--clr-prim-10);
+}
+
+.footer p {
+    font-size: 1.25rem;
+    text-transform: capitalize;
+    color: var(--clr-white);
+}
+
